tweaked flickity slider to fix cutoff height

--- a/style.css
+++ b/style.css
@@ -265,3 +265,10 @@ ol {
   margin: 0;
   border-radius: 0;
 }
+
+.flickity-viewport {
+	min-height: 100%;
+	/* height: 800px !important; */
+	height: 70vw !important;
+	/* height: 100% !important; */
+}
